<resources>
    <string name="app_name">DonationX</string>
    <string name="donateTitle">Welcome McGregor</string>
    <string name="donateSubtitle">Please Give Generously</string>
    <string name="donateButton">Donate</string>
    <string name="paypal">PayPal</string>
    <string name="direct">Direct</string>
    <string name="amount">Amount</string>
    <string name="total">Total so Far</string>
    <string name="totalSoFar">$ %1$d</string>
    <string name="reportTitle">Donations Report</string>
    <string name="defaultAmount">00</string>
    <string name="defaultMethod">N/A</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="action_donate">Donate</string>
    <string name="action_report">Report</string>

    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>

    <string name="nav_header_title">DonationX (Lab)</string>
    <string name="nav_header_subtitle">voteforMcGregor@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">McGregor for President !!</string>
    <string name="aboutus_message">Welcome to my gym app\nPlease Donate\nWe\'re very low on funds</string>
    <string name="donationsNotFound">No Donations Yet…\nGo Make a Donation!</string>
    <string name="donationError">Error : Couldn\'t Make a Donation…</string>
    <string name="donationDetails">Donation Details</string>

    <string name="amt">Amount :</string>
    <string name="payment">Payment :</string>
    <string name="message">Message :</string>
    <string name="upvotes">UpVotes :</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <string name="messageLoading">Please Wait while the Donations are Loading...</string>

    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>

    <string name="select_profile_image">Select Profile Image</string>


    <string name="gym_action">Gym</string>
    <string name="button_addPlacemark">Add Placemark</string>
    <string name="hint_placemarkTitle">Placemark Title</string>
    <string name="hint_placemarkDescription">Description </string>
    <string name="menu_addPlacemark">Add</string>
    <string name="menu_cancelPlacemark">Cancel</string>
    <string name="enter_placemark_title"> Please enter a Placemark Title </string>
    <string name="save_placemark"> Save Placemark </string>
    <string name="select_placemark_image">Select placemark image</string>
    <string name="change_placemark_image">Change placemark image</string>
    <string name="button_addgym">Add gym</string>
    <string name="hint_gymTitle">gym Title</string>
    <string name="hint_gymDescription">Description </string>
    <string name="menu_addgym">Add</string>
    <string name="menu_cancelgym">Cancel</string>
    <string name="enter_gym_title"> Please enter a gym Title </string>
    <string name="save_gym"> Save gym </string>
    <string name="button_addImage"> Add Image </string>
    <string name="select_gym_image">Select gym image</string>
    <string name="change_gym_image">Change gym image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="click_to_login">Click here to login now!</string>
    <string name="click_to_register">Click here to register now!</string>
    <string name="button_delete">Delete</string>
    <string name="hint_gymContactNumber">Contact Number\n</string>
    <string name="hint_gymActivtiy">Activity Status\n</string>
    <string name="default_web_client_id">528433932199-puh60oaag8335fmde8svhl7ug28te761.apps.googleusercontent.com\n</string>
    <string name="default_username">john\n</string>
    <string name="action_theme">Theme \n</string>
    <string-array name="filter_options">
        <item></item>
        <item>Team Ryano</item>
        <item>SBG</item>
    </string-array>

</resources>