<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/reportFragment">

    <fragment
        android:id="@+id/donateFragment"
        android:name="ie.wit.donationx.ui.donate.DonateFragment"
        android:label="@string/action_donate"
        tools:layout="@layout/fragment_donate" >
        <action
            android:id="@+id/action_donateFragment_to_reportFragment"
            app:destination="@id/reportFragment"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/reportFragment"
        android:name="ie.wit.donationx.ui.report.ReportFragment"
        android:label="@string/action_report"
        tools:layout="@layout/fragment_report" >
        <action
            android:id="@+id/action_reportFragment_to_donateFragment"
            app:destination="@id/donateFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim" />
        <action
            android:id="@+id/action_reportFragment_to_donationDetailFragment"
            app:destination="@id/donationDetailFragment" />
    </fragment>
    <fragment
        android:id="@+id/aboutFragment"
        android:name="ie.wit.donationx.ui.about.AboutFragment"
        android:label="@string/action_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/donationDetailFragment"
        android:name="ie.wit.donationx.ui.detail.DonationDetailFragment"
        android:label="Donation Detail"
        tools:layout="@layout/fragment_donation_detail" >
        <action
            android:id="@+id/action_donationDetailFragment_to_reportFragment"
            app:destination="@id/reportFragment" />
        <argument
            android:name="donationid"
            app:argType="string" />
    </fragment>


    <fragment
        android:id="@+id/gymFragment"
        android:name="ie.wit.donationx.ui.gyms.GymFragment"
        android:label="Gym Fragments"
        tools:layout="@layout/fragment_gyms">
        <action
            android:id="@+id/action_gymFragment_to_gymActivityFragment"
            app:destination="@id/gymActivityFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_gymFragment_to_gymMapFragment"
            app:destination="@id/gymActivityFragment"
            app:popUpTo="@id/main_navigation"
            app:popUpToInclusive="true" />
        <action
            android:id="@+id/action_gymFragment_to_GymMapsFragment"
            app:destination="@id/GymMapsFragment" />
        <action
            android:id="@+id/action_gymFragment_to_gymFragment2"
            app:destination="@id/theme_change" />
    </fragment>
    <fragment
        android:id="@+id/theme_change"
        android:name="ie.wit.donationx.ui.gyms.GymFragment"
        android:label="Gym Fragments"
        tools:layout="@layout/fragment_gyms"/>
    <fragment
        android:id="@+id/gymActivityFragment"
        android:name="ie.wit.donationx.ui.gyms.GymActivityFragment"
        android:label="Gym Activity Fragment"
        tools:layout="@layout/fragment_gymactivity">
        <action
            android:id="@+id/action_gymActivityFragment_to_gymFragment"
            app:destination="@id/gymFragment"
            app:popUpTo="@id/gymFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/GymMapsFragment"
        android:name="ie.wit.donationx.ui.maps.GymMapsFragment"
        android:label="Gym Activity Fragment"
        tools:layout="@layout/fragment_gymactivity">
        <action
            android:id="@+id/action_gymMapsFragment_to_gymFragment"
            app:destination="@id/gymFragment"
            app:popUpTo="@id/gymFragment"
            app:popUpToInclusive="true" />
    </fragment>


</navigation>